class page overflow fix trial 2

--- a/src/components/pages/Classes/Classes.scss
+++ b/src/components/pages/Classes/Classes.scss
@@ -10,7 +10,9 @@
     box-sizing: border-box;
     
 }
-
+.heroContainer{
+    overflow-x: hidden;
+}
 #hero {
     position: relative;
     width: 100%;
